[tool.poetry]
name = "bark"
version = "0.1.0"
description = "Example project from Dane Hillard's book"
authors = ["Rem M. <morrig407@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
